--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+bcrypt==4.3.0
 blinker==1.9.0
 cffi==1.17.1
 charset-normalizer==3.4.2
@@ -6,6 +7,9 @@ cryptography==45.0.3
 Deprecated==1.2.18
 deprecation==2.1.0
 Flask==3.1.1
+Flask-Bcrypt==1.0.1
+Flask-Login==0.6.3
+Flask-SQLAlchemy==3.1.1
 gevent==25.5.1
 greenlet==3.2.3
 gunicorn==23.0.0
@@ -26,6 +30,8 @@ pluggy==1.6.0
 pycparser==2.22
 Pygments==2.19.1
 rich==14.0.0
+SQLAlchemy==2.0.41
+typing_extensions==4.14.0
 Werkzeug==3.1.3
 wrapt==1.17.2
 zope.event==5.0
